# sysprocalc

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: rust.yml
bitgroup/: Cargo.toml
bitgroup/src/: bit_range.rs  lib.rs  register.rs  register_descriptor.rs  registers.rs  unit_tests.rs  utils.rs
bitgroup/src/registers/: cpu_x86_registers.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: spceval.rs
spc-expr/: Cargo.toml
spc-expr/src/: lib.rs
spceval/: Cargo.toml
spceval/src/: evaluator.rs  functions.rs  lib.rs  operators.rs  unit_tests.rs
spceval/src/evaluator/: mod.rs  unit_tests.rs
spceval/tests/: integration.rs  tests.rs
spcregs/: Cargo.toml
spcregs/src/: bit_range.rs  lib.rs  register.rs  register_descriptor.rs  register_map.rs  registers.rs  unit_tests.rs  utils.rs
spcregs/src/register_map/: cpu_x86_registers.rs  x86.rs
spcregs/src/registers/: cpu_x86_registers.rs
src/: bit_group.rs  bitset.rs  logger.rs  main.rs  registers.rs  sys_bit_set.rs
