[package]
name = "sysprocalc"
version = "1.0.0"
authors = ["Ramshankar <v.ramshankar@gmail.com>"]
description = "System Programmer's Calculator"
# documentation =
homepage = "https://github.com/Teknomancer/sysprocalc"
repository = "https://github.com/Teknomancer/sysprocalc"
readme = "README.md"
keywords = ["x86","expression","evaluator","x86-registers"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
exclude = ["/.github"]
edition = "2018"

[workspace]

[dependencies]
spceval = { path = "spceval" }
bitgroup = { path = "bitgroup" }
log = "0.4"
atty = "0.2"
termcolor = "1.1"
rustyline = "6.1"

