[package]
name = "sysprocalc"
version = "0.0.1"
authors = ["Ramshankar <v.ramshankar@gmail.com>"]
description = """
A command-line calculator for evaluating expressions with support for
x86/x64 register descriptions and common unit conversions for system programmers.
"""
# documentation =
homepage = "https://github.com/Teknomancer/sysprocalc"
repository = "https://github.com/Teknomancer/sysprocalc"
readme = "README.md"
keywords = ["x86","expression","evaluator","x86-registers"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
exclude = ["/.github"]
edition = "2024"

[[bin]]
name = "spc"
path = "src/main.rs"
bench = false

[workspace]

[dependencies]
spceval = { path = "spceval" }
spcregs = { path = "spcregs" }
log = "0.4.28"
termcolor = "1.4.1"
rustyline = "17.0.1"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.bench]
lto = "fat"
codegen-units = 1

