[package]
name = "sysprocalc-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
spceval = { path = "../spceval" }

# [dependencies.sysprocalc]
# path = ".."

[[bin]]
name = "fuzz_target_spceval"
path = "fuzz_targets/spceval.rs"
test = false
doc = false
bench = false
