[package]
name = "spceval"
version = "0.0.1"
authors = ["Ramshankar <v.ramshankar@gmail.com>"]
description = "System Programmer's Calculator's library for evaluating expressions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Teknomancer/sysprocalc"

keywords = ["x86","expression","evaluator"]

edition = "2018"

[dependencies]
log = "0.4.28"
arrayvec = "0.7.6"
static_assertions = "1.1.0"
