[package]
name = "spcregs"
version = "0.0.1"
authors = ["Ramshankar <v.ramshankar@gmail.com>"]
description = "System Programmer's Calculator's Registers Library for describing bits of hardware registers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Teknomancer/sysprocalc"

keywords = ["x86","x86-register","x86-register-descriptions","bit-group"]

edition = "2021"

[dependencies]
log = "0.4"
bitvec = "0.22.3"
funty = "2.0.0"

