[package]
name = "spcregs"
version = "0.0.1"
authors = ["Ramshankar <v.ramshankar@gmail.com>"]
description = "System Programmer's Calculator's library for describing hardware registers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Teknomancer/sysprocalc"

keywords = ["x86","x86-register","x86-register-descriptions","hardware-register"]

edition = "2024"

[dependencies]
log = "0.4.28"
bitvec = "1.0.1"
funty = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
zerovec = { version = "0.11.4", features = ["serde", "derive"] }
zerofrom = "0.1.6"
